<resources>
    <string name="app_name">Tartaro</string>
    <string name="register"><u>Registrar</u></string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="BtnIniciar">Iniciar</string>
    <string name="mailReg">Email</string>
    <string name="nameReg">Nombre</string>
    <string name="passReg">Contraseña</string>
    <string name="confPassReg">Confirmar Contraseña</string>
    <string name="TipoUsuarios">Tipos de Usuarios</string>
    <string name="Rbtn1">TECNICO</string>
    <string name="Rbtn2">NORMAL</string>
    <string name="btnAceptar">ACEPTAR</string>
    <string name="btnDeclinar">DECLINAR</string>
    <string name="BtnRegCan">Cancelar</string>
    <string name="BtnReg">Registrar</string>
    <string name="BtnPendientes">Pendientes</string>
    <string name="BtnProceso">Proceso</string>
    <string name="BtnBusqueda">Busqueda</string>
    <string name="BtnCrear">+Crear Tarea</string>
    <string name="BtnTodas">Todas</string>
    <string name="BtnGuardar">Guardar</string>
    <string name="JLCategoria">Categoria:</string>
    <string name="JLDescripcion">Descripcion:</string>
    <string name="JLAsignar">Asignar A:</string>
    <string name="JLAsignado">Asignado A:</string>
    <string name="JLEstado">Estado:</string>
    <string name="JLCreador">Creado Por:</string>
    <string name="BtnListo">LISTO</string>
    <string name="BtnEliminar">ELIMINAR</string>
    <string name="BtnAgregar">Agregar Nota</string>
    <string name="IniciarTarea">INICIAR</string>
    <string name="IniciarConfirmacion">¿Esta seguro que desea INICIAR esta tarea?.</string>
    <string name="TerminarTarea">TERMINAR</string>
    <string name="TerminarConfirmacion">¿Esta seguro que desea TERMINAR esta tarea?.</string>
    <string name="EliminarConfirmacion">¿Esta seguro que desea ELIMINAR esta tarea?.\n
        OJO! Si Elimina la tarea, el creador de la misma ya no podrá verla. </string>
    <string name="EliminarTarea"><u>Eliminar Tarea</u></string>
    <string-array name="Estados_spinner">
        <item><font color='#ffffff'>Todas</font></item>
        <item><font color='#ffffff'>En Proceso</font></item>
        <item><font color='#ffffff'>Pendientes</font></item>
    </string-array>
    <string name="Busqueda">Search</string>
    <string name="Eliminar">Delete</string>
    <string name="Opciones">Settings</string>
    <string name="SearchHint">Inicia tu busqueda...</string>

</resources>
