<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/task_bar_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:textColor="@color/BtnCrear"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/jLUsuarioCreador2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:text="@string/JLEstado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCategoria2" />

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jLUsuarioCreador" />

        <TextView
            android:id="@+id/jLDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/JLDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEstado" />

        <TextView
            android:id="@+id/txtDescripcion2"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jLDescripcion" />

        <TextView
            android:id="@+id/jLUsuarioCreador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/JLAsignado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCategoria2" />

        <TextView
            android:id="@+id/txtUsuarioCreador"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jLUsuarioCreador" />

        <TextView
            android:id="@+id/jLCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/JLCategoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCategoria2"
            android:layout_width="134dp"
            android:layout_height="39dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jLCategoria" />

        <TextView
            android:id="@+id/fechaTarea2"
            android:layout_width="108dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAgregarN"
            android:layout_width="141dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/BtnAgregar"
            app:layout_constraintBottom_toTopOf="@+id/_dynamic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcion2" />

        <TextView
            android:id="@+id/txtTaskName"
            android:layout_width="170dp"
            android:layout_height="73dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/txtDescripcion2"
            app:layout_constraintStart_toEndOf="@+id/txtUsuarioCreador"
            app:layout_constraintTop_toBottomOf="@+id/fechaTarea2"
            app:layout_constraintVertical_bias="0.403" />

        <ListView
            android:layout_width="368dp"
            android:layout_height="103dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>